--- a/FSearch.HTML
+++ b/FSearch.HTML
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Search - GreenOil Document Management System</title>
-  <link rel="stylesheet" href="Fstyle.css">
+  <link rel="stylesheet" href="css/Fstyle.css">
+
 </head>
 <body>
   <!-- Header Section -->
