--- a/FWork Instructions.HTML
+++ b/FWork Instructions.HTML
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Work Instructions - GreenOil Document Management System</title>
-  <link rel="stylesheet" href="Fstyle.css">
+  <link rel="stylesheet" href="css/Fstyle.css">
+
 </head>
 <body>
   <!-- Header Section -->
@@ -15,7 +16,7 @@
 
   <!-- Vertical Menu -->
   <nav class="vertical-menu">
-    <a href="FWork Instructions.html">Work Instructions</a> <!-- This links back to the Work Instruction page -->
+    <a href="FWork Instructions.HTML">Work Instructions</a> <!-- This links back to the Work Instruction page -->
     <a href="FContact.HTML">Contact</a> <!-- This links back to the Contact page -->
     <a href="F_Index5.html">Home</a> <!-- This links back to the Home page -->
 
