--- a/FWork_Instructions.HTML
+++ b/FWork_Instructions.HTML
@@ -16,7 +16,7 @@
 
   <!-- Vertical Menu -->
   <nav class="vertical-menu">
-    <a href="FWork Instructions.HTML">Work Instructions</a> <!-- This links back to the Work Instruction page -->
+    <a href="FWork_Instructions.HTML">Work Instructions</a> <!-- This links back to the Work Instruction page -->
     <a href="FContact.HTML">Contact</a> <!-- This links back to the Contact page -->
     <a href="F_Index5.html">Home</a> <!-- This links back to the Home page -->
 
