--- a/F_Index5.html
+++ b/F_Index5.html
@@ -15,9 +15,9 @@
 
   <!-- Vertical Menu -->
   <nav class="vertical-menu">
-    <a href="FWork Instructions.html">Work Instructions</a> <!-- This links back to the Work Instruction page -->
+    <a href="FWork_Instructions.HTML">Work Instructions</a> <!-- This links back to the Work Instruction page -->
     <a href="FContact.HTML">Contact</a> <!-- This links to the Contact page -->
-        <a href="FSearch.HTML">Search</a> <!-- Link to the Search page -->
+    <a href="FSearch.HTML">Search</a> <!-- Link to the Search page -->
   </nav>
 
   <!-- Main Content -->
