--- a/FContact.HTML
+++ b/FContact.HTML
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Search - GreenOil Document Management System</title>
+  <title>Contact - GreenOil Document Management System</title>
   <link rel="stylesheet" href="css/Fstyle.css">
 
 </head>
