--- a/FWork_Instructions.HTML
+++ b/FWork_Instructions.HTML
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,16 +17,27 @@
 
   <!-- Vertical Menu -->
   <nav class="vertical-menu">
-    <a href="FWork_Instructions.HTML">Work Instructions</a> <!-- This links back to the Work Instruction page -->
-    <a href="FContact.HTML">Contact</a> <!-- This links back to the Contact page -->
+    <a href="FWork_Instructions.html">Work Instructions</a> <!-- This links to the Work Instruction page -->
+    <a href="FContact.HTML">Contact</a>  <!-- This links to the Contact page -->
     <a href="F_Index5.html">Home</a> <!-- This links back to the Home page -->
-
   </nav>
 
-  <!-- Main Content -->
+ <!-- Main Content -->
   <div class="container">
-    <h2>Work Instructions</h2>
-    <p>Content for working instructions goes here...</p>
+    <h2>Contact Us</h2>
+    <p>If you have any questions or requests, please feel free to reach out to us.</p>
+    
+    <form id="contactForm" action="mailto:youremail@example.com" method="POST" enctype="multipart/form-data">
+      <label for="email">Your Email:</label>
+      <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
+      <label for="message">Your Message:</label>
+      <textarea id="message" name="message" placeholder="Enter your message here" required></textarea>
+
+      <button type="submit">Send</button>
+    </form>
+
+    <div id="confirmationMessage"></div>
   </div>
 
   <script src="script.js"></script>
