--- a/FContact.HTML
+++ b/FContact.HTML
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact - GreenOil Document Management System</title>
-  <link rel="stylesheet" href="css/Fstyle.css">
-
+ <link rel="stylesheet" href="css/Fstyle.css">
 </head>
 <body>
   <!-- Header Section -->
@@ -16,7 +15,7 @@
 
   <!-- Vertical Menu -->
   <nav class="vertical-menu">
-    <a href="FWork Instructions.html">Work Instructions</a> <!-- This links to the Work Instruction page -->
+    <a href="FWork_Instructions.html">Work Instructions</a> <!-- This links to the Work Instruction page -->
     <a href="FContact.HTML">Contact</a>  <!-- This links to the Contact page -->
     <a href="F_Index5.html">Home</a> <!-- This links back to the Home page -->
   </nav>
