--- a/FContact.HTML
+++ b/FContact.HTML
@@ -16,7 +16,7 @@
 
   <!-- Vertical Menu -->
   <nav class="vertical-menu">
-    <a href="FWork_Instructions.html">Work Instructions</a> <!-- This links to the Work Instruction page -->
+    <a href="FWork_Instructions.HTML">Work Instructions</a> <!-- This links to the Work Instruction page -->
     <a href="FContact.HTML">Contact</a>  <!-- This links to the Contact page -->
     <a href="F_Index5.html">Home</a> <!-- This links back to the Home page -->
   </nav>
